customizando tipografia e containers

--- a/index.html
+++ b/index.html
@@ -25,29 +25,31 @@
   <body>
     <header><!---Início Cabeçalho--->
       <div class="container">
-        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-secondary ">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente ">
           <a href="index.html" class="navbar-brand">
             <img src="imagens/spotify.svg" width="142">
           </a>
 
-          <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+          <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal ">
             <i class="fas fa-bars text-white"></i>
           </button>
           <div class="collapse navbar-collapse" id="nav-principal">
             <ul class="navbar-nav ml-auto">
-              <li>
+              <li class="nav-item">
                 <a href="" class="nav-link">Premium</a>
               </li>
-              <li>
+              <li class="nav-item">
                 <a href="" class="nav-link">Ajuda</a>
               </li>
-              <li>
+              <li class="nav-item">
                 <a href="" class="nav-link">Baixar</a>
               </li>
-              <li>
+              <li class="nav-item divisor"></li>
+
+              <li class="nav-item">
                 <a href="" class="nav-link">Inscrever-se</a>
               </li>
-              <li>
+              <li class="nav-item">
                 <a href="" class="nav-link">Entar</a>
               </li>
             </ul>
@@ -56,6 +58,18 @@
         </nav>
       </div>
     </header><!---Fim Cabeçalho--->
+
+    <section id="home" class="d-flex"><!---Início Seção home--->
+      <div class="container align-self-center">
+        <div class="row">
+          <div class="col-md-12 capa">
+            <h1>Música para todos</h1>
+            <a href="" class="btn  btn-lg btn-custom btn-roxo">Aproveite o Spotfy free</a>
+            <a href="" class="btn  btn-lg btn-custom btn-branco">Obter Spotfy Preemium</a>
+          </div>
+        </div>
+      </div>
+    </section><!---Fim Seção--->
 
 
     <!-- JavaScript (Opcional) -->
