--- a/index.html
+++ b/index.html
@@ -65,17 +65,73 @@
           <div class="col-md-12 capa">
             <h1>Música para todos</h1>
             <a href="" class="btn  btn-lg btn-custom btn-roxo">Aproveite o Spotfy free</a>
-            <a href="" class="btn  btn-lg btn-custom btn-branco">Obter Spotfy Preemium</a>
+            <a href="" class="btn   btn-custom btn-branco">Obter Spotfy Preemium</a>
           </div>
         </div>
       </div>
     </section><!---Fim Seção--->
 
 
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
-  </html>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="imagens/spotify.svg" width="142">
+          </div>
+          <div class="col-md-2">
+
+           <h4>COMPANY</h4>
+           <ul class="navbar-nav">
+             <li><a href="">sobre</a></li>
+             <li><a href="">empregos</a></li>
+             <li><a href="">imprensa</a></li>
+             <li><a href="">novidades</a></li>
+           </ul>
+         </div>
+         <div class="col-md-2">
+
+          <h4>COMUNIDADES</h4>
+          <ul class="navbar-nav">
+           <li><a href="">Artistas</a></li>
+           <li><a href="">Desenvolvedores</a></li>
+           <li><a href="">Marcas</a></li>
+         </ul>
+       </div>
+       <div class="col-md-2">
+
+         <h4>LINKS UTEIS</h4>
+         <ul class="navbar-nav">
+           <li><a href="">Ajuda</a></li>
+           <li><a href="">Presentes</a></li>
+           <li><a href="">Play da web</a></li>
+         </ul>
+       </div>
+       <div class="col-md-4">
+
+        <ul>
+         <li>
+          <a href=""><img src="imagens/facebook.png" ></a>
+        </li>
+        <li>
+          <a href=""><img src="imagens/twitter.png" ></a>
+        </li>
+        <li>
+          <a href=""><img src="imagens/instagram.png" ></a>
+        </li>
+
+      </ul>
+    </div>
+
+
+
+  </div>
+</div>
+</footer>
+
+<!-- JavaScript (Opcional) -->
+<!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
+</html>
