Concluido a pagina principal

--- a/index.html
+++ b/index.html
@@ -63,68 +63,92 @@
       <div class="container align-self-center">
         <div class="row">
           <div class="col-md-12 capa">
-            <h1>Música para todos</h1>
-            <a href="" class="btn  btn-lg btn-custom btn-roxo">Aproveite o Spotfy free</a>
-            <a href="" class="btn   btn-custom btn-branco">Obter Spotfy Preemium</a>
+           <div  id="carousel-spotify" class=" carousel slide" data-ride="carousel">
+
+             <div class="carousel-inner"><!---Início do inner--->
+
+               <div   class="carousel-item active">
+                <h1>Música para todos</h1>
+                <a href="" class="btn btn-lg btn-custom btn-roxo">Aproveite o Spotify Free</a>
+                <a href="" class="btn btn-lg btn-custom btn-branco">Obter Spotify Premium</a>
+
+              </div>
+
+              <div class="carousel-item">
+                <h1>As melhores radios</h1>
+                <a href="" class="btn btn-lg btn-custom btn-branco"><i class="fas fa-music">Ouça agora</i></a>
+
+              </div>
+            </div><!---Fim do inner--->
+            <!---Fim do inner--->
+            <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
+              <i class="fas fa-angle-left fa-3x"></i>
+            </a>
+
+            <a href="#carousel-spotify" class="carousel-control-next" data-slide="next">
+              <i class="fas fa-angle-right fa-3x"></i>
+            </a>
+
           </div>
         </div>
       </div>
-    </section><!---Fim Seção--->
+    </div>
+  </section><!---Fim Seção--->
 
 
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <img src="imagens/spotify.svg" width="142">
-          </div>
-          <div class="col-md-2">
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <img src="imagens/spotify.svg" width="142">
+        </div>
+        <div class="col-md-2">
 
-           <h4>COMPANY</h4>
-           <ul class="navbar-nav">
-             <li><a href="">sobre</a></li>
-             <li><a href="">empregos</a></li>
-             <li><a href="">imprensa</a></li>
-             <li><a href="">novidades</a></li>
-           </ul>
-         </div>
-         <div class="col-md-2">
-
-          <h4>COMUNIDADES</h4>
-          <ul class="navbar-nav">
-           <li><a href="">Artistas</a></li>
-           <li><a href="">Desenvolvedores</a></li>
-           <li><a href="">Marcas</a></li>
+         <h4>COMPANY</h4>
+         <ul class="navbar-nav">
+           <li><a href="">sobre</a></li>
+           <li><a href="">empregos</a></li>
+           <li><a href="">imprensa</a></li>
+           <li><a href="">novidades</a></li>
          </ul>
        </div>
        <div class="col-md-2">
 
-         <h4>LINKS UTEIS</h4>
-         <ul class="navbar-nav">
-           <li><a href="">Ajuda</a></li>
-           <li><a href="">Presentes</a></li>
-           <li><a href="">Play da web</a></li>
-         </ul>
-       </div>
-       <div class="col-md-4">
+        <h4>COMUNIDADES</h4>
+        <ul class="navbar-nav">
+         <li><a href="">Artistas</a></li>
+         <li><a href="">Desenvolvedores</a></li>
+         <li><a href="">Marcas</a></li>
+       </ul>
+     </div>
+     <div class="col-md-2">
 
-        <ul>
-         <li>
-          <a href=""><img src="imagens/facebook.png" ></a>
-        </li>
-        <li>
-          <a href=""><img src="imagens/twitter.png" ></a>
-        </li>
-        <li>
-          <a href=""><img src="imagens/instagram.png" ></a>
-        </li>
+       <h4>LINKS UTEIS</h4>
+       <ul class="navbar-nav">
+         <li><a href="">Ajuda</a></li>
+         <li><a href="">Presentes</a></li>
+         <li><a href="">Play da web</a></li>
+       </ul>
+     </div>
+     <div class="col-md-4">
 
-      </ul>
-    </div>
+      <ul>
+       <li>
+        <a href=""><img src="imagens/facebook.png" ></a>
+      </li>
+      <li>
+        <a href=""><img src="imagens/twitter.png" ></a>
+      </li>
+      <li>
+        <a href=""><img src="imagens/instagram.png" ></a>
+      </li>
 
-
-
+    </ul>
   </div>
+
+
+
+</div>
 </div>
 </footer>
 
